--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 
 <body>
     
-    <h2 class="header-text">Pick a color:</h2>
+    <h2 class="header-text">Adjust the color sliders:</h2>
     <div class="container">
         <div>
             <div class="slider-container">
